tests/ui/traits/new-solver/recursive-self-normalization-2.stderr
error[E0275]: overflow evaluating the requirement `<T as Foo1>::Assoc1: Bar`
  --> $DIR/recursive-self-normalization-2.rs:15:5
   |
LL |     needs_bar::<T::Assoc1>();
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`recursive_self_normalization_2`)
note: required by a bound in `needs_bar`
  --> $DIR/recursive-self-normalization-2.rs:12:17
   |
LL | fn needs_bar<S: Bar>() {}
   |                 ^^^ required by this bound in `needs_bar`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
